support non-integer time values

--- a/config.py.EXAMPLE
+++ b/config.py.EXAMPLE
@@ -63,6 +63,8 @@ pid_ki = 0.1  # Integration
 pid_kd = 0.4  # Derivative
 pid_kp = 0.5  # Proportional
 
+pid_disable_runaway_protection = False
+
 
 ########################################################################
 #
